# RtMidiWrapper

./: .gitignore  CMakeLists.txt  RtMidiWrapper.sln  RtMidiWrapper.vcxproj  RtMidiWrapper.vcxproj.filters
src/: Main.cpp  README.md  RtMidiWrapper.h
src/MidiDevice/: MidiError.h  MidiIn.h  MidiInCallback.h  MidiOut.h
src/MidiMessage/: MidiMessage.h  SoundMaps.h
src/RtMidi/: RtMidi.cpp  RtMidi.h
src/Test/: Test.cpp
